<resources>
    <string name="app_name">NavigationDrawerKotlin</string>
    <string name="my_account">My Account</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="other">Other</string>
    <string name="notification">Notification</string>
    <string name="contact_us">Contact Us</string>
    <string name="private_policy">Private Policy</string>
    <string name="muslim">Muslim</string>
    <string name="ali">Ali</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>