<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/my_account">
        <menu >
            <item
                android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/home" />
            <item
                android:id="@+id/profile"
                android:title="@string/profile"
                android:icon="@drawable/profile" />
            <item
            android:id="@+id/notification"
            android:title="@string/notification"
            android:icon="@drawable/notifications" />
        </menu>
    </item>
    <item
        android:title="@string/other" >
        <menu >
            <item
                android:title="@string/contact_us"
                android:icon="@drawable/contacts" />
            <item
                android:title="@string/private_policy"
                android:icon="@drawable/local_police" />
            <item
                android:title="@string/setting"
                android:icon="@drawable/settings" />
        </menu>

    </item>

</menu>